--- a/src/components/Categories/Categories.module.css
+++ b/src/components/Categories/Categories.module.css
@@ -25,5 +25,5 @@
 }
 
 .h2 {
-  margin-bottom: 0.25rem;
+  margin: 4rem 0 0.25rem;
 }
