--- a/src/components/Feature/Feature.module.css
+++ b/src/components/Feature/Feature.module.css
@@ -1,5 +1,5 @@
 .container {
-  margin: 0 0 1rem auto;
+  margin: 0 auto;
   height: 300px;
   display: grid;
   grid-template-columns: 5fr 4fr;
@@ -10,13 +10,13 @@
 .featureImg {
   height: 100%;
   border-radius: 1rem;
-  border: 1px solid black;
-  background: linear-gradient(90deg, rgba(4, 41, 48) 0%, rgba(11, 83, 96) 65%, rgba(0, 36, 38) 99%);
+  /* border: 1px solid black; */
+  /* background: linear-gradient(90deg, rgba(4, 41, 48) 0%, rgba(11, 83, 96) 65%, rgba(0, 36, 38) 99%); */
   background-image: url('../../../public/mesh-610.png');
   /* background-position: 80%; */
   /* background-blend-mode: multiply; */
   background-size: 21%;
-  box-shadow: 0px 15px 50px 22px rgba(0, 64, 67, 0.1);
+  box-shadow: 0px 15px 50px 22px rgba(0, 64, 67, 0.15);
   & img {
     width: 0%;
     height: 0%;
@@ -38,8 +38,8 @@
   height: 100%;
   padding: 2rem;
   border-radius: 1rem;
-  border: 1px solid black;
-  box-shadow: 0px 15px 50px 22px rgba(0, 64, 67, 0.1);
+  /* border: 1px solid black; */
+  box-shadow: 0px 15px 50px 22px rgba(0, 64, 67, 0.15);
   background-color: rgb(255, 255, 255);
   color: rgb(13, 82, 87);
 }
